Fix dropdown and autocomplete overflow, and start get work hours

--- a/front/src/scripts/components/layouts/main_layout/style/main_layout.scss
+++ b/front/src/scripts/components/layouts/main_layout/style/main_layout.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    div {
+    & > div {
       overflow-x: hidden;
     }
   }
